# LiveF1

./: 2025_schedule.csv  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  basic_test.json  feeds.json  feeds_count.json  ff1_test.ipynb  ff1_test2.ipynb  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  signalr_test.py  test.ipynb  test.py  test2.py  test_jdh.ipynb  test_timing.ipynb  timing.csv  timing1.csv  timing11.xlsx
.github/: pip_dependency.yml
.github/workflows/: build_doc.yml  docs.yml  new_docs.yml  pip_dependency.yml  publish.yml  publish_old.yml  python-publish.yml  test.yml
doc/: conf.py
doc/source/: api.rst
docs/: 404.rst  requirements.txt
docs/source/: 404.rst  api.rst  conf.py  index.rst  test.rst
dold_doc/: conf.py  index.rst
examples/: realtime_test.py  session_custom_silver_example.py  table_register_example.py
livef1/: __init__.py  api.py  functions.py
livef1/adapters/: __init__.py  functions.py  jolpicaf1_adapter.py  livetimingf1_adapter.py  other.py  realtime_client.py
livef1/data/: circuits_key.csv  find_track_start.py  starting_coordinates.json
test/: simple_test.py  table_register.py  temp_test.py  test.ipynb
tests/: conftest.py  test_adapters.py  test_all.sh  test_api.py  test_availability_helpers.py  test_constants.py  test_data_models_and_lakes.py  test_etl.py  test_exceptions.py  test_find_track_start.py  test_helper.py  test_integration_generate.py  test_jolpica_etl.py  test_models_session.py  test_parse_functions.py  test_realtime_client.py  test_silver_functions.py
(+61 files in other folders)
